# Architecture_Simulation

./: README.md  SC.txt
Cache/: Makefile  cachesim.h
Cache_Coherence/protocols/: MESI_protocol.cpp  MESI_protocol.h  MOESIF_protocol.cpp  MOESIF_protocol.h  MOSI_protocol.cpp  MOSI_protocol.h  MSI_protocol.cpp  MSI_protocol.h
Cache_Coherence/traces/4proc_validation/: MESI_validation.txt  MOESIF_validation.txt  MOESI_validation.txt
Cache_Coherence/traces/8proc_validation/: MESI_validation.txt  MOESIF_validation.txt  MOESI_validation.txt
MC/: MS_CLOCK.vhd  MS_CONTROL.vhd  MS_EXECUTE.vhd  MS_IDECODE.vhd  MS_IFETCH.vhd  MS_MIPS.vhd
Multi-level Cache/: run_script.sh
Multi-level Cache/C++/: CMakeLists.txt  cache.cpp  cache.hpp  cache_driver.cpp
Pipeline/: pipe_reg1.vhd  pipe_reg2.vhd  pipe_reg3.vhd  pipe_reg4.vhd  ps_clock.vhd  ps_control.vhd  ps_decode.vhd  ps_execute.vhd  ps_fetch.vhd  ps_memory.vhd  spim_pipe.vhd
Tomasulo/src/: Makefile  procsim.cpp  procsim.hpp  procsim_driver.cpp
Tomasulo/traces/: bwaves603_2M.trace
cache/: cachesim  cachesim.c
